--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-select/ng-select": "^1.5.1",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "angular2-jwt": "^0.2.3",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
